<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TvShow</string>
    <string name="title_favorite_movie">Fav.Movie</string>
    <string name="title_favorite_tv_show">Fav.Tv Show</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="cast">Cast :</string>
    <string name="score">Score :</string>
    <string name="description">Description :</string>
    <string name="more_info">More Info</string>
    <string name="released_date">Released Date :</string>
    <string name="status">Status :</string>
    <string name="creator">Creator :</string>
    <string name="img_movie_description">These are lists of movie posters</string>
    <string name="img_tv_show_description">These are lists of tv show posters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_success_insert_favorite_dialogue">Successfully added to Favorite</string>
    <string name="query_fail_insert_favorite_dialogue">Failed adding to Favorite</string>
    <string name="query_success_remove_favorite_dialogue">Successfully removed from Favorite</string>
    <string name="query_fail_remove_favorite_dialogue">Failed removing from Favorite </string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="empty_text">Empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_app_notif">Let\'s see what\'s new today</string>
    <string name="message_set_movie_alarm">New movie notification is activated</string>
    <string name="message_cancel_movie_alarm">New movie notification is canceled</string>
    <string name="message_set_app_alarm">Daily application reminder is activated</string>
    <string name="message_cancel_app_alarm">Daily application reminder is canceled</string>
    <string name="new_movie_notive_message">New movie released!</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_message">Activate daily reminder to check application everyday</string>
    <string name="movie_reminder">Movie Reminder</string>
    <string name="movie_reminder_message">Activate new movie notification</string>

</resources>
