<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/title_movie"
        android:visible="true" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_tvshow"
        android:visible="true" />

    <item
        android:id="@+id/navigation_favorite_movie"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite_movie"
        android:visible="true" />

    <item
        android:id="@+id/navigation_favorite_tv_show"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite_tv_show"
        android:visible="true" />

</menu>
