<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="my.jalal.catalogue.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="my.jalal.catalogue.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_favorite_movie"
        android:name="my.jalal.catalogue.ui.favorite_movie.FavoriteMovieFragment"
        android:label="@string/title_favorite_movie"
        tools:layout="@layout/fragment_favorite_movie" />

    <fragment
        android:id="@+id/navigation_favorite_tv_show"
        android:name="my.jalal.catalogue.ui.favorite_tv_show.FavoriteTvShowFragment"
        android:label="@string/title_favorite_tv_show"
        tools:layout="@layout/fragment_favorite_tv_show"/>
</navigation>